# CatClaw

./: .env.example  .gitignore  CATCLAW_FEATURES.md  README.md  TROUBLESHOOTING.md  build.bat  fix_proxy.bat  install.bat  install_no_proxy.bat  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.py  run.sh  test_deepseek.py
.claude/: settings.local.json
docs/: __init__.py  channels.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  theme.js
frontend/src/components/: DesktopPet.jsx  Sidebar.jsx
frontend/src/pages/: ChannelsPage.jsx  ChatPage.jsx  MemoryPage.jsx  PromptsPage.jsx  SessionsPage.jsx  SettingsPage.jsx  SkillsPage.jsx  ToolsPage.jsx
privateclaw/: __init__.py  cli.py  main.py
privateclaw/api/: __init__.py  prompts.py
privateclaw/channels/: __init__.py  base.py
privateclaw/channels/feishu/: __init__.py  channel.py
privateclaw/channels/qq/: __init__.py  channel.py
privateclaw/channels/web/: __init__.py  api.py  app.py  channel.py  websocket.py
privateclaw/config/: __init__.py  settings.py
privateclaw/core/: __init__.py  self_improvement.py
privateclaw/core/agent/: __init__.py  agent.py  executor.py  planner.py
privateclaw/gateway/: __init__.py  server.py
privateclaw/plugins/: __init__.py
privateclaw/skills/: __init__.py  loader.py  manager.py
prompts/: AGENTS.md  IDENTITY.md  MEMORY.md  SKILLS_SNAPSHOT.md  SOUL.md  USER.md
skills/: find_file.md  git_commit.md  sys_info.md  translate.md  weather_query.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_llm.py  test_memory.py  test_tools.py
素材/: max-HTML-桌宠.7z
素材/max-HTML-桌宠/: index.css  index.html
(+47 files in other folders)
