[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privateclaw"
version = "0.1.0"
description = "Your own private AI assistant, powered by LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "PrivateClaw Team" },
]

dependencies = [
    # Core
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.30.0",

    # Vector Store
    "chromadb>=0.5.0",

    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.0"]
slack = ["slack-bolt>=1.18.0"]
all = [
    "privateclaw[telegram,discord,slack]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
privateclaw = "privateclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["privateclaw"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
